@@ -1,3 +1,8 @@
+##### Fri 06/07/2012
+* kind of find out a way to handle Tcl list, the bloody bracket!
+* Modify the argument parser and add add list checker & list breaker.
+* "echo" and "help" are added back to AVS shell.
+
 ##### Thu 05/07/2012
 * start further Tcl shell implementation.
 * Finished the modification of c++/Tcl, now support ClientData field. It is merged back to AVS.
